AUGREL/src/objects/Form__c.object
<CustomObject>
    <description>Represents a distinct form to be generated through the Adobe Forms Service.</description>
    <fields>
        <fullName>Copy_per_FAC__c</fullName>
        <defaultValue>true</defaultValue>
        <description>SRC: Salesforce 
INT: 
Trans: N 
BU: RL 
FD: Drives behavior of form generation to produce a document request for each active FAC associated with the account.</description>
        <inlineHelpText>If checked then a separate form is generated for each active FAC with that FAC&apos;s information</inlineHelpText>
        <label>Copy per FAC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Document_Request_Record_Type__c</fullName>
        <description>SRC: Salesforce 
INT: 
Trans: N 
BU: RL 
FD: Determines the record type for the generated document request.</description>
        <label>Document Request Record Type</label>
        <picklist>
            <picklistValues>
                <fullName>Rights Letters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Notice of Sale</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <label>Document Type</label>
        <picklist>
            <picklistValues>
                <fullName>REPONTC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BKCVCUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BKCVREP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REPODOC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Entity_Key__c</fullName>
        <label>Entity Key</label>
        <picklist>
            <picklistValues>
                <fullName>ScheduleIdentifier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RescheduleSequenceNumber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TerminationQuoteIdentifier</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ext_ID_del__c</fullName>
        <label>Ext ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_Number__c</fullName>
        <label>Form Number</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Form_Type__c</fullName>
        <label>Form Type</label>
        <picklist>
            <picklistValues>
                <fullName>Automatic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MigrationID__c</fullName>
        <description>SRC: Salesforce 
INT: 
Trans: N 
BU: RL 
FD: Arbitrary unique number assigned to the record to facilitate migration of metadata between environments.</description>
        <externalId>true</externalId>
        <label>MigrationID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>NumberOfCopies__c</fullName>
        <description>Integer value to indicate the number of copies to send to the customer</description>
        <label>NumberOfCopies</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_System__c</fullName>
        <description>Holds targetSystem</description>
        <label>Target System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>certifiedmail__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean value to indicate form needs to send via certified mail or not.</description>
        <label>certifiedmail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>legalEnvelop__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean value to indicate to use legal envelope or not</description>
        <label>legalEnvelop</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>returnEnvelopRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean value to indicate return envelope is required of no</description>
        <label>returnEnvelopRequired</label>
        <type>Checkbox</type>
    </fields>
    <label>Form</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Form_Number__c</columns>
        <columns>Form_Type__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Form_Number__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Form Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>